[package]
name = "async-matches-responder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
lambda_runtime = "0.5.1"
serde = { version = "1.0.137",  features = ["derive"] }
serde_json = "1.0.79"
lol = { path = "../lol" }
common = { path = "../common" }
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"] }
hyper = "0.14"
aws-config = "0.15.0"
aws-sdk-dynamodb = "0.15.0"
#penssl = { version = "0.10", features = ["vendored"] }
