[package]
name = "interaction-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
lambda_runtime = "0.5.1"
serde = { version = "1.0.137",  features = ["derive"] }
serde_json = "1.0.79"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
futures = "0.3.21"
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"] }
lol = { path = "../lol" }
#openssl = { version = "0.10", features = ["vendored"] }
