[package]
name = "lol"
version = "0.1.0"
authors = ["Gordon Martin"]
edition = "2018"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"] }
futures = "0.3.21"
serde = { version = "1.0.137",  features = ["derive"] }
serde_json = "1.0.79"
#openssl = { version = "0.10", features = ["vendored"] }
